# QUBIT-Quantum-Upgrade-Bridge-Inventory-Tool

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  router.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: AnimatedPage.tsx  AssetTable.tsx  Layout.tsx
dashboard/src/hooks/: useActiveScan.ts  useLiquidGlass.ts
dashboard/src/pages/: Cbom.tsx  Inventory.tsx  Login.tsx  MigrationDetail.tsx  Migrations.tsx  Projects.tsx  Risk.tsx  Scans.tsx  Settings.tsx  Timeline.tsx
dashboard/src/stores/: ui.ts
demo-lab/vulnapp-python/: app.py  compose.yaml  requirements.txt
docs/: BUILD_PLAN.md
docs/design/: 00-architecture-frame.md  01-discovery-inventory.md  02-risk-engine.md  03-migration-orchestrator.md  04-hybrid-bridge-demo.md  05-platform-api-dashboard.md  06-engineering-plan.md  07-ecosystem-factcheck.md
knowledge/extracted/: architecture.txt  project-abstract.md  research-plan.txt
project-phase-memory/: AGENT_WORK_SPLIT.md  CORE_PROMPTS.md  PROJECT_PHASE_MEMORY.md  SUBAGENT_WORK_LOG.md  USER_PROMPTS_LOG.md
